# pretix-regid

./: .pypirc  .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style-upload.yml  style.yml  tests.yml
pretix_regid/: __init__.py  apps.py  models.py  signals.py  urls.py  views.py
pretix_regid/migrations/: 0001_initial.py
pretix_regid/templates/pretix_regid/: control_order_info.html  order_info.html  settings.html
