[project]
name = "pretix-regid"
dynamic = ["version"]
description = "Adds an automatic registration ID to approved orders"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "Christiaan de Die le Clercq (techwolf12)", email = "contact@techwolf12.nl"},
]
maintainers = [
    {name = "Christiaan de Die le Clercq (techwolf12)", email = "contact@techwolf12.nl"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_regid = "pretix_regid:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/techwolf12/pretix-regid"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_regid.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
